# llamp

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.cross  Instruccions.md  Instruccions.qwen.md  README.md  RELEASE.md  build-cross.sh  build-docker.sh  extract_binaries.sh  llamp.example.toml  release.sh
.github/workflows/: ci.yml  docker.yml  release-plz.yml  release.yml
migrations/: 20260101000000_create_tables.sql
proxy-analyze/: .env.example  README.md  analyze_diff.py  check-compat.sh  debug_proxy.py
src/: auth.rs  config.rs  db.rs  lib.rs  main.rs  models.rs
src/providers/: mod.rs  openai.rs
src/proxy/: logging.rs  mod.rs
src/tunnel/: mod.rs
tests/: cli_test.rs  config_test.rs  db_test.rs  integration_test.rs  models_test.rs  provider_test.rs  tunnel_test.rs
