[package]
name = "llamp"
edition = "2021"
version = "0.1.0"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
clap = { version = "4.0", "features" = ["derive"] }
config = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
ulid = "1.0"
tiktoken-rs = "0.5"
governor = "0.6"
anyhow = "1.0"
thiserror = "1.0"
futures-util = "0.3"
tower-http = { version = "0.4", features = ["cors", "trace"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"